Lastet opp siste oppdatering for Karakter E

--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@
     <link href="ikoner/css/brands.css" rel="stylesheet" />
     <link href="ikoner/css/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Eksamen | Kevin 2024</title>
+    <title>Checkout | Eksamen | Kevin 2024</title>
   </head>
   <body>
     <div id="grid-container">
@@ -215,7 +215,6 @@
           />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
         <h5>KONTAKT</h5>
         <ul id="contact-info">
           <li>
@@ -235,11 +234,20 @@
             Stenger 15:00
           </li>
         </ul>
-        <h5>SNARVEIER</h5>
+        <h4>SNARVEIER</h4>
         <ul id="footer-nav">
-          <li><a href="product.html">Produkter</a></li>
-          <li><a href="index.html#categories">Kategorier</a></li>
-          <li><a href="#contant-info">Kontakt oss</a></li>
+          <li>
+            <a href="index.html#products">Produkter</a>
+          </li>
+          <li>
+            <a href="index.html#categories">Kategorier</a>
+          </li>
+          <li>
+            <a href="#contant-info">Kontakt oss</a>
+          </li>
+          <li>
+            <a href="Tilgjengelighetserklæring.pdf">Tilgjengelighetserklæring</a>
+          </li>
         </ul>
         <h5>SOSIALE MEDIER</h5>
         <ul id="social-media">
@@ -249,19 +257,13 @@
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
           </li>
           <li>
-            <a href="https://no.pinterest.com/"
-              ><i class="fa-brands fa-pinterest"></i
-            ></a>
+            <a href="https://no.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a>
           </li>
         </ul>
       </footer>
