--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="ikoner/css/brands.css" rel="stylesheet" />
     <link href="ikoner/css/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Eksamen | Kevin 2024</title>
+    <title>Forside | Eksamen | Kevin 2024</title>
   </head>
   <body>
     <div id="grid-container">
@@ -70,32 +70,50 @@
             <p id="best-sellers">Best Sellers</p>
           </div>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <img
+              src="https://picsum.photos/id/8/200/200"
+              alt="MacBook Air M2"
+            />
             <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
@@ -207,9 +225,18 @@
         </ul>
         <h4>SNARVEIER</h4>
         <ul id="footer-nav">
-          <li><a href="product.html">Produkter</a></li>
-          <li><a href="index.html#categories">Kategorier</a></li>
-          <li><a href="#contant-info">Kontakt oss</a></li>
+          <li>
+            <a href="index.html#products">Produkter</a>
+          </li>
+          <li>
+            <a href="index.html#categories">Kategorier</a>
+          </li>
+          <li>
+            <a href="#contant-info">Kontakt oss</a>
+          </li>
+          <li>
+            <a href="Tilgjengelighetserklæring.pdf">Tilgjengelighetserklæring</a>
+          </li>
         </ul>
         <h5>SOSIALE MEDIER</h5>
         <ul id="social-media">
@@ -219,19 +246,13 @@
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
           </li>
           <li>
-            <a href="https://no.pinterest.com/"
-              ><i class="fa-brands fa-pinterest"></i
-            ></a>
+            <a href="https://no.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a>
           </li>
         </ul>
       </footer>
