--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link href="ikoner/css/brands.css" rel="stylesheet" />
     <link href="ikoner/css/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Eksamen | Kevin 2024</title>
+    <title>Produkt | Eksamen | Kevin 2024</title>
   </head>
   <body>
     <div id="grid-container">
@@ -61,10 +61,10 @@
       <main>
         <section id="products">
           <article id="product-on-display">
-            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
-            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
-            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
-            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
+            <img src="bilder/dressjakke.jpg" alt="Blå dressjakke" />
+            <img src="bilder/dressjakke.jpg" alt="Blå dressjakke" />
+            <img src="bilder/dressjakke.jpg" alt="Blå dressjakke" />
+            <img src="bilder/dressjakke.jpg" alt="Blå dressjakke" />
             <!--Image by <a href="https://pixabay.com/users/clangs-825633/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">智铿 梁</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">Pixabay</a>-->
             <a href="product.html"><h1>Produktnavn</h1></a>
             <p id="brand">MERKENAVN</p>
@@ -133,7 +133,7 @@
           />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <h4>KONTAKT</h4>
+        <h5>KONTAKT</h5>
         <ul id="contact-info">
           <li>
             <span><i class="fa-solid fa-location-dot"></i> Adresse:</span>
@@ -152,11 +152,20 @@
             Stenger 15:00
           </li>
         </ul>
-        <h5>SNARVEIER</h5>
+        <h4>SNARVEIER</h4>
         <ul id="footer-nav">
-          <li><a href="product.html">Produkter</a></li>
-          <li><a href="index.html#categories">Kategorier</a></li>
-          <li><a href="#contant-info">Kontakt oss</a></li>
+          <li>
+            <a href="index.html#products">Produkter</a>
+          </li>
+          <li>
+            <a href="index.html#categories">Kategorier</a>
+          </li>
+          <li>
+            <a href="#contant-info">Kontakt oss</a>
+          </li>
+          <li>
+            <a href="Tilgjengelighetserklæring.pdf">Tilgjengelighetserklæring</a>
+          </li>
         </ul>
         <h5>SOSIALE MEDIER</h5>
         <ul id="social-media">
@@ -166,19 +175,13 @@
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
           </li>
           <li>
-            <a href="https://no.pinterest.com/"
-              ><i class="fa-brands fa-pinterest"></i
-            ></a>
+            <a href="https://no.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a>
           </li>
         </ul>
       </footer>
